--- a/notebooks/Clase4.ipynb
+++ b/notebooks/Clase4.ipynb
@@ -379,7 +379,7 @@
         "import IPython\n",
         "from IPython.display import Audio, display"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -418,7 +418,7 @@
         },
         "outputId": "bf5fe850-d833-41e4-8a16-53644f011ec1"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -479,7 +479,7 @@
       "metadata": {
         "id": "Ai12q4TInTbg"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -521,7 +521,7 @@
       "metadata": {
         "id": "CKzQSTPaykfl"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -678,7 +678,7 @@
       "metadata": {
         "id": "cWvxRw4OVgNY"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +764,7 @@
       "metadata": {
         "id": "Q9UpJeDvVNw5"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -932,7 +932,7 @@
       "metadata": {
         "id": "jqYXOvPW2ZJZ"
       },
-      "execution_count": 171,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -943,7 +943,7 @@
       "metadata": {
         "id": "NJZclsy52i7m"
       },
-      "execution_count": 172,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +959,7 @@
         "id": "8VWaCKcp2orp",
         "outputId": "60539d21-f39d-4cf7-e2d3-2f0b29aaa4b7"
       },
-      "execution_count": 173,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -993,7 +993,7 @@
       "metadata": {
         "id": "lxBVuGSb6mZV"
       },
-      "execution_count": 99,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1004,7 +1004,7 @@
       "metadata": {
         "id": "_KtXpWe9-CYq"
       },
-      "execution_count": 175,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1020,7 +1020,7 @@
         "id": "iWaTSfSp-FrN",
         "outputId": "16dc649d-0c3c-464f-a8b1-5355cb3b2c6f"
       },
-      "execution_count": 176,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1067,7 +1067,7 @@
       "metadata": {
         "id": "mknWFnj52zdm"
       },
-      "execution_count": 100,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1083,7 +1083,7 @@
         "id": "cXSycMfs3oAh",
         "outputId": "a7aff3dc-46a9-4f95-b386-9b5f549f620b"
       },
-      "execution_count": 104,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1122,7 +1122,7 @@
         "id": "a7ufkyok345l",
         "outputId": "38b8ca1e-64bc-4653-8ef6-6e539bbba815"
       },
-      "execution_count": 102,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1235,7 +1235,7 @@
       "metadata": {
         "id": "V1RRSe75WIsD"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1458,6 +1458,204 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# RNN"
+      ],
+      "metadata": {
+        "id": "OjOK3Wp8qBFO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "in_features = 10\n",
+        "out_features = 4\n",
+        "num_seq = 3\n",
+        "N = 5"
+      ],
+      "metadata": {
+        "id": "49GOQMZ3qAgb"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rnn = nn.RNN(in_features,out_features)"
+      ],
+      "metadata": {
+        "id": "kVtJs6nXqGDC"
+      },
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dummy_ = torch.rand(num_seq,N,in_features)"
+      ],
+      "metadata": {
+        "id": "v0cBGfW6qJgU"
+      },
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for param in rnn.parameters():\n",
+        "  print(param.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LfNla3wPqaRe",
+        "outputId": "156a43f1-ce7a-4184-e520-bd5ceb2eb9ed"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([4, 10])\n",
+            "torch.Size([4, 4])\n",
+            "torch.Size([4])\n",
+            "torch.Size([4])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "params = [param for param in rnn.parameters()]"
+      ],
+      "metadata": {
+        "id": "CJLgZ96fqNRC"
+      },
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Wih = torch.zeros(out_features, in_features)\n",
+        "Whh = torch.zeros(out_features,out_features)\n",
+        "bih = torch.zeros(out_features)\n",
+        "bhh = torch.zeros(out_features)"
+      ],
+      "metadata": {
+        "id": "Dlik6HcJqRtl"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "Wih.data = params[0].data\n",
+        "Whh.data = params[1].data\n",
+        "bih.data = params[2].data\n",
+        "bhh.data = params[3].data"
+      ],
+      "metadata": {
+        "id": "bWrP1n0dqdnS"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rnn(dummy_)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6C23dSZTqkcH",
+        "outputId": "9e1f4983-e0d7-4a6e-c8b3-9a10cbf99327"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[[-0.4638, -0.6391,  0.5647, -0.6661],\n",
+              "          [-0.5389, -0.7378,  0.5592, -0.7464],\n",
+              "          [-0.0857, -0.6728,  0.4881, -0.0849],\n",
+              "          [-0.4806, -0.6487,  0.3437, -0.5263],\n",
+              "          [ 0.1986, -0.5174,  0.4175, -0.1006]],\n",
+              " \n",
+              "         [[-0.3957, -0.5786, -0.0050, -0.9018],\n",
+              "          [-0.5696, -0.6966,  0.1552, -0.9157],\n",
+              "          [ 0.3560, -0.4445, -0.1099, -0.5399],\n",
+              "          [-0.4976, -0.7885,  0.4798, -0.8394],\n",
+              "          [-0.0012, -0.3574, -0.0470, -0.6034]],\n",
+              " \n",
+              "         [[ 0.0180, -0.7758,  0.3838, -0.8747],\n",
+              "          [-0.5458, -0.7570,  0.5640, -0.8785],\n",
+              "          [-0.0363, -0.7023, -0.0023, -0.2457],\n",
+              "          [-0.1463, -0.5213,  0.2563, -0.7479],\n",
+              "          [-0.2383, -0.7646,  0.0751, -0.7856]]], grad_fn=<StackBackward0>),\n",
+              " tensor([[[ 0.0180, -0.7758,  0.3838, -0.8747],\n",
+              "          [-0.5458, -0.7570,  0.5640, -0.8785],\n",
+              "          [-0.0363, -0.7023, -0.0023, -0.2457],\n",
+              "          [-0.1463, -0.5213,  0.2563, -0.7479],\n",
+              "          [-0.2383, -0.7646,  0.0751, -0.7856]]], grad_fn=<StackBackward0>))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "h = torch.zeros(N,out_features)\n",
+        "for x_ in dummy_:\n",
+        "  h = torch.tanh(x_ @ Wih.T + bih + h @ Whh.T + bhh)\n",
+        "  print(h)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8cOmd2-Zql6N",
+        "outputId": "808bcb28-87e5-4c3f-ee9a-dcf5ea30fe2d"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[-0.4638, -0.6391,  0.5647, -0.6661],\n",
+            "        [-0.5389, -0.7378,  0.5592, -0.7464],\n",
+            "        [-0.0857, -0.6728,  0.4881, -0.0849],\n",
+            "        [-0.4806, -0.6487,  0.3437, -0.5263],\n",
+            "        [ 0.1986, -0.5174,  0.4175, -0.1006]])\n",
+            "tensor([[-0.3957, -0.5786, -0.0050, -0.9018],\n",
+            "        [-0.5696, -0.6966,  0.1552, -0.9157],\n",
+            "        [ 0.3560, -0.4445, -0.1099, -0.5399],\n",
+            "        [-0.4976, -0.7885,  0.4798, -0.8394],\n",
+            "        [-0.0012, -0.3574, -0.0470, -0.6034]])\n",
+            "tensor([[ 0.0180, -0.7758,  0.3838, -0.8747],\n",
+            "        [-0.5458, -0.7570,  0.5640, -0.8785],\n",
+            "        [-0.0363, -0.7023, -0.0023, -0.2457],\n",
+            "        [-0.1463, -0.5213,  0.2563, -0.7479],\n",
+            "        [-0.2383, -0.7646,  0.0751, -0.7856]])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# LSTM"
       ],
       "metadata": {
@@ -1484,7 +1682,7 @@
       "metadata": {
         "id": "ZPDoXbx-Ookt"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1495,7 +1693,7 @@
       "metadata": {
         "id": "7lTN74_uOo55"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1511,7 +1709,7 @@
         "id": "ae8T3-bEOq2j",
         "outputId": "38b8a473-b873-4e8a-bfdc-84732a3c3007"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1578,7 +1776,7 @@
       "metadata": {
         "id": "NmTc5BvOOxrJ"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1589,7 +1787,7 @@
       "metadata": {
         "id": "FZulf81GOzVi"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1600,7 +1798,7 @@
       "metadata": {
         "id": "PhWtQO5wO1Al"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1614,7 +1812,7 @@
       "metadata": {
         "id": "deByA1ghO2Yw"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1625,7 +1823,7 @@
       "metadata": {
         "id": "neN6KOVeO3gv"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1637,7 +1835,7 @@
       "metadata": {
         "id": "gY-mnaKRO7oy"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1652,7 +1850,7 @@
         "id": "tLXtmyZ6O-PN",
         "outputId": "71f47bf9-0d17-4f01-ae8d-30b7adbcd675"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1709,7 +1907,7 @@
       "metadata": {
         "id": "ajhzNe-oA6Ke"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1721,7 +1919,7 @@
       "metadata": {
         "id": "Oo2ShQO4A7QU"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1739,7 +1937,7 @@
         "id": "QlTYiua3s1Ke",
         "outputId": "a83619b1-9fe2-4626-dded-c3009b022600"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1769,7 +1967,7 @@
       "metadata": {
         "id": "AI7_nKniAdZO"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1780,7 +1978,7 @@
       "metadata": {
         "id": "z2bStJR2A1Cs"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1797,7 +1995,7 @@
         "id": "RR9AunBKBCZN",
         "outputId": "283470d9-2c3b-415b-f4c5-dc74fde74e46"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1825,7 +2023,7 @@
       "metadata": {
         "id": "jzyrmsUi-d37"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1856,7 +2054,7 @@
         },
         "outputId": "72a67f97-0d13-427c-f084-f57fdd566412"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
